@@ -1,3 +1,9 @@
+2001-03-23  Nick Clifton  <nickc@redhat.com>
+
+	* a29k.h: Fix compile time warning.
+	* external.h: Fix compile time warning.
+	* m88k.h: Fix compile time warning.
+
 2001-03-13  Nick Clifton  <nickc@redhat.com>
 
 	* external.h: New file. Common structure definitions found in
